<resources>
    <string name="app_name">NewDiary</string>
    <string name="add_dialog_title">添加日程</string>
    <string name="add_dialog_text_1">类型：</string>
    <string name="add_dialog_text2">颜色：</string>
    <string name="add_dialog_text3">计划：</string>
    <string name="add_dialog_text4">其他：</string>
    <string name="add_dialog_text5">任何：</string>
    <string name="main_menu_importData">导入数据</string>
    <string name="main_menu_outData">导出数据</string>
    <string name="main_menu_clearData">清除全部数据</string>
    <string name="main_menu_oldDataToNew">旧版数据迁移</string>
    <string name="main_menu_set">设置</string>
    <string name="main_menu_switchTheme">切换背景</string>
    <string name="main_floatButton_contentDescription">添加日程</string>
    <string name="main_information">Information</string>
    <string name="main_menu_allData">数据统计</string>
    <string name="dialog_display_allData_title">数据统计信息</string>
</resources>